# Mycorec

./: LICENSE  README.md  mycorec.cabal
app/: Main.hs
resources/: ukFungiList.txt
src/: Mycorec.hs  SourceRecord.hs  SourceRecordParser.hs  TextToTitle.hs
test/: Spec.hs
