name:                mycorec
version:             0.1.0.0
synopsis:            Fungi records parser
description:         Match field records against official list with scientific & common names
homepage:            https://github.com/alskipp/mycorec#readme
license:             BSD3
license-file:        LICENSE
author:              Al Skipp
maintainer:          al_skipp@fastmail.fm
copyright:           2016 Al Skipp
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mycorec, SourceRecord, SourceRecordParser
  other-modules:       TextToTitle
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , split
                     , transformers
  default-language:    Haskell2010

executable mycorec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mycorec
  default-language:    Haskell2010

test-suite mycorec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mycorec
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alskipp/mycorec
